added api calls to get requests