@@ -5,9 +5,7 @@ import org.apache.xmlrpc.XmlRpcException;
 import org.json.JSONArray;
 import org.json.JSONObject;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.*;
 
 public class BuilderSystem extends Team {
 
@@ -16,20 +14,20 @@ public class BuilderSystem extends Team {
     }
 
     public int createTask(String name) {
-        return this.odoo.create("project.task", Arrays.asList(new HashMap<>() {{
+        return this.odoo.create("project.task", List.of(new HashMap<>() {{
             put("name", name);
         }}));
     }
 
     public int createTask(String name, String description) {
-        return this.odoo.create("project.task", Arrays.asList(new HashMap<>() {{
+        return this.odoo.create("project.task", List.of(new HashMap<>() {{
             put("name", name);
             put("description", description);
         }}));
     }
 
     public int createTask(String name, String description, int buildWidth, int buildLength) {
-        return this.odoo.create("project.task", Arrays.asList(new HashMap<>() {{
+        return this.odoo.create("project.task", List.of(new HashMap<>() {{
             put("name", name);
             put("description", description);
             put("build_width", buildWidth);
@@ -38,35 +36,35 @@ public class BuilderSystem extends Team {
     }
 
     public void removeTask(int id) {
-        this.odoo.unlink("project.task", Arrays.asList(Arrays.asList(id)));
+        this.odoo.unlink("project.task", List.of(List.of(id)));
     }
 
     public void editTaskName(int id, String newName) {
-        this.odoo.write("project.task", Arrays.asList(Arrays.asList(id), new HashMap<>() {{
+        this.odoo.write("project.task", Arrays.asList(List.of(id), new HashMap<>() {{
             put("name", newName);
         }}));
     }
 
     public void editTaskDescription(int id, String newDescription) {
-        this.odoo.write("project.task", Arrays.asList(Arrays.asList(id), new HashMap<>() {{
+        this.odoo.write("project.task", Arrays.asList(List.of(id), new HashMap<>() {{
             put("description", newDescription);
         }}));
     }
 
     public void editTaskBuildWidth(int id, int newBuildWidth) {
-        this.odoo.write("project.task", Arrays.asList(Arrays.asList(id), new HashMap<>() {{
+        this.odoo.write("project.task", Arrays.asList(List.of(id), new HashMap<>() {{
             put("build_width", newBuildWidth);
         }}));
     }
 
     public void editTaskBuildLength(int id, int newBuildLength) {
-        this.odoo.write("project.task", Arrays.asList(Arrays.asList(id), new HashMap<>() {{
+        this.odoo.write("project.task", Arrays.asList(List.of(id), new HashMap<>() {{
             put("build_length", newBuildLength);
         }}));
     }
 
     public void editTask(int id, String newName, String newDescription, int newBuildWidth, int newBuildLength) {
-        this.odoo.write("project.task", Arrays.asList(Arrays.asList(id), new HashMap<>() {{
+        this.odoo.write("project.task", Arrays.asList(List.of(id), new HashMap<>() {{
             put("name", newName);
             put("description", newDescription);
             put("build_width", newBuildWidth);
@@ -78,7 +76,7 @@ public class BuilderSystem extends Team {
         try {
             return new JSONArray(this.odoo.getModels().execute("execute_kw", Arrays.asList(
                     this.odoo.getDatabase(), this.odoo.getUid(), this.odoo.getPassword(),
-                    "project.task", "get_all_tasks", Arrays.asList()
+                    "project.task", "get_all_tasks", List.of()
             )));
         } catch (XmlRpcException e) {
             e.printStackTrace();
@@ -90,7 +88,7 @@ public class BuilderSystem extends Team {
         try {
             return new JSONObject((Map<String, String>) this.odoo.getModels().execute("execute_kw", Arrays.asList(
                     this.odoo.getDatabase(), this.odoo.getUid(), this.odoo.getPassword(),
-                    "project.task", "get_task", Arrays.asList(id)
+                    "project.task", "get_task", List.of(id)
             )));
         } catch (XmlRpcException e) {
             e.printStackTrace();
@@ -228,7 +226,7 @@ public class BuilderSystem extends Team {
         try {
             return (String) this.odoo.getModels().execute("execute_kw", Arrays.asList(
                     this.odoo.getDatabase(), this.odoo.getUid(), this.odoo.getPassword(),
-                    "gc.builder.world", "get_world_data", Arrays.asList(worldID)
+                    "gc.builder.world", "get_world_data", List.of(worldID)
             ));
         } catch (XmlRpcException e) {
             e.printStackTrace();
@@ -240,7 +238,7 @@ public class BuilderSystem extends Team {
         try {
             return new JSONArray(this.odoo.getModels().execute("execute_kw", Arrays.asList(
                     this.odoo.getDatabase(), this.odoo.getUid(), this.odoo.getPassword(),
-                    "gc.permission.connector", "get_user_worlds", Arrays.asList(playerUUID)
+                    "gc.permission.connector", "get_user_worlds", Collections.singletonList(playerUUID)
             )));
         } catch (XmlRpcException e) {
             e.printStackTrace();
@@ -252,7 +250,7 @@ public class BuilderSystem extends Team {
         try {
             return new JSONArray(this.odoo.getModels().execute("execute_kw", Arrays.asList(
                     this.odoo.getDatabase(), this.odoo.getUid(), this.odoo.getPassword(),
-                    "gc.permission.connector", "get_team_worlds", Arrays.asList(teamId)
+                    "gc.permission.connector", "get_team_worlds", List.of(teamId)
             )));
         } catch (XmlRpcException e) {
             e.printStackTrace();
@@ -264,7 +262,7 @@ public class BuilderSystem extends Team {
         try {
             return new JSONArray(this.odoo.getModels().execute("execute_kw", Arrays.asList(
                     this.odoo.getDatabase(), this.odoo.getUid(), this.odoo.getPassword(),
-                    "gc.builder.world", "get_all_worlds", Arrays.asList()
+                    "gc.builder.world", "get_all_worlds", List.of()
             )));
         } catch (XmlRpcException e) {
             e.printStackTrace();
@@ -276,7 +274,7 @@ public class BuilderSystem extends Team {
         try {
             return new JSONObject((Map<String, String>) this.odoo.getModels().execute("execute_kw", Arrays.asList(
                     this.odoo.getDatabase(), this.odoo.getUid(), this.odoo.getPassword(),
-                    "gc.builder.world", "get_world", Arrays.asList(id)
+                    "gc.builder.world", "get_world", List.of(id)
             )));
         } catch (XmlRpcException e) {
             e.printStackTrace();
@@ -288,7 +286,43 @@ public class BuilderSystem extends Team {
         try {
             return new JSONArray(this.odoo.getModels().execute("execute_kw", Arrays.asList(
                     this.odoo.getDatabase(), this.odoo.getUid(), this.odoo.getPassword(),
-                    "gc.builder.world.type", "get_all_world_types", Arrays.asList()
+                    "gc.builder.world.type", "get_all_world_types", List.of()
+            )));
+        } catch (XmlRpcException e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    public JSONArray getUserMemberOrTeamToWorldInvitations(String playerUUID) {
+        try {
+            return new JSONArray(this.odoo.getModels().execute("execute_kw", Arrays.asList(
+                    this.odoo.getDatabase(), this.odoo.getUid(), this.odoo.getPassword(),
+                    "gc.request", "get_user_member_or_team_to_world_invitations", Collections.singletonList(playerUUID)
+            )));
+        } catch (XmlRpcException e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    public JSONArray getTeamMemberOrTeamToWorldInvitations(int teamId) {
+        try {
+            return new JSONArray(this.odoo.getModels().execute("execute_kw", Arrays.asList(
+                    this.odoo.getDatabase(), this.odoo.getUid(), this.odoo.getPassword(),
+                    "gc.request", "get_team_member_or_team_to_world_invitations", List.of(teamId)
+            )));
+        } catch (XmlRpcException e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    public JSONArray getWorldMemberOrTeamToWorldInvitations(int worldId) {
+        try {
+            return new JSONArray(this.odoo.getModels().execute("execute_kw", Arrays.asList(
+                    this.odoo.getDatabase(), this.odoo.getUid(), this.odoo.getPassword(),
+                    "gc.request", "get_world_member_or_team_to_world_invitations", List.of(worldId)
             )));
         } catch (XmlRpcException e) {
             e.printStackTrace();
